@@ -123,14 +123,14 @@ public class ActionInvoker {
 
             // 2. Easy debugging ...
             if (Play.mode == Play.Mode.DEV) {
-                Controller.class.getDeclaredField("params").set(null, Scope.Params.current());
-                Controller.class.getDeclaredField("request").set(null, Http.Request.current());
-                Controller.class.getDeclaredField("response").set(null, Http.Response.current());
-                Controller.class.getDeclaredField("session").set(null, Scope.Session.current());
-                Controller.class.getDeclaredField("flash").set(null, Scope.Flash.current());
-                Controller.class.getDeclaredField("renderArgs").set(null, Scope.RenderArgs.current());
-                Controller.class.getDeclaredField("routeArgs").set(null, Scope.RouteArgs.current());
-                Controller.class.getDeclaredField("validation").set(null, Validation.current());
+                Controller.params = Scope.Params.current();
+                Controller.request = Http.Request.current();
+                Controller.response = Http.Response.current();
+                Controller.session = Scope.Session.current();
+                Controller.flash = Scope.Flash.current();
+                Controller.renderArgs = Scope.RenderArgs.current();
+                Controller.routeArgs = Scope.RouteArgs.current();
+                Controller.validation = Validation.current();
             }
 
             ControllerInstrumentation.stopActionCall();
@@ -155,9 +155,9 @@ public class ActionInvoker {
                     cacheKey = cacheFor.id();
                     if ("".equals(cacheKey)) {
                         // Generate a cache key for this request
-                        cacheKey = cacheFor.generator().newInstance().generate(request);
+                        cacheKey = cacheFor.generator().getDeclaredConstructor().newInstance().generate(request);
                     }
-                    if(cacheKey != null && !"".equals(cacheKey)) {
+                    if(cacheKey != null && !cacheKey.isEmpty()) {
                     	actionResult = (Result) Cache.get(cacheKey);
                     }
                 }
@@ -169,7 +169,7 @@ public class ActionInvoker {
             } catch (Result result) {
                 actionResult = result;
                 // Cache it if needed
-                if (cacheKey != null && !"".equals(cacheKey)) {
+                if (cacheKey != null && !cacheKey.isEmpty()) {
                     Cache.set(cacheKey, actionResult, actionMethod.getAnnotation(CacheFor.class).value());
                 }
             } catch (JavaExecutionException e) {
@@ -610,7 +610,7 @@ public class ActionInvoker {
 
     public static Object[] getActionMethodArgs(Method method, Object o) throws Exception {
         String[] paramsNames = Java.parameterNames(method);
-        if (paramsNames == null && method.getParameterTypes().length > 0) {
+        if (paramsNames.length == 0 && method.getParameterCount() > 0) {
             throw new UnexpectedException("Parameter names not found for method " + method);
         }
 
@@ -622,9 +622,8 @@ public class ActionInvoker {
             return rArgs;
         }
 
-        rArgs = new Object[method.getParameterTypes().length];
-        for (int i = 0; i < method.getParameterTypes().length; i++) {
-
+        rArgs = new Object[method.getParameterCount()];
+        for (int i = 0; i < method.getParameterCount(); i++) {
             Class<?> type = method.getParameterTypes()[i];
             Map<String, String[]> params = new HashMap<>();
 
